// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar> that renders a horizontal progress bar should add classes when props are changed 1`] = `
<div>
  <div
    aria-hidden="true"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="25"
    class="ProgressBar ProgressBar--hidden ProgressBar--small"
    role="progressbar"
  >
    <div
      class="ProgressBar__fill ProgressBar__fill--animated ProgressBar__fill--small"
      style="width: 25%;"
    />
  </div>
</div>
`;

exports[`<ProgressBar> that renders a horizontal progress bar should render a default progress bar correctly 1`] = `
<div>
  <div
    aria-hidden="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="25"
    class="ProgressBar"
    role="progressbar"
  >
    <div
      class="ProgressBar__fill"
      style="width: 25%;"
    >
      25%
    </div>
  </div>
</div>
`;
